faq page tab collapse function fix

--- a/main/t_and_c/css/style-blue.css
+++ b/main/t_and_c/css/style-blue.css
@@ -6264,7 +6264,7 @@ ul.filter-categories > li {
           content: "\f068"; }
   .faqs .panel-content {
     padding: 30px 40px;
-    background: #edf6ff; }
+    background: #66ccff; }
 
 /* terms and conditions */
 ul.filter-options li {
